# sqlite-diesel-wasm-example

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml  index.html  justfile  serve.py  worker.js
migrations/2025-04-13-231337_create_transactions/: up.sql
migrations/2025-04-14-025322_add todo/: up.sql
src/: lib.rs  schema.rs
