[package]
name = "testing"
description = "trying out a new way"
repository = "https://github.com/crockeo/testing"
license = "MIT"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.40"
diesel = { version = "2.2.9", features = ["chrono", "sqlite", "returning_clauses_for_sqlite_3_35"] }
sqlite-wasm-rs = { version = "0.3.2", default-features = false, features = ["precompiled"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
